Completed : data files, lifecycle

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^2.0.0
   provider:
   shared_preferences:
+  path_provider: ^2.0.14
 
 
 dev_dependencies:
@@ -93,22 +94,25 @@ flutter:
       fonts:
         - asset: assets/fonts/ChivoMono-VariableFont_wght.ttf
           weight: 900
-        - asset: assets/fonts/ChivoMono-VariableFont_wght.ttf
+        - asset: assets/fonts/Chivo-Black.ttf
           weight: 800
-        - asset: assets/fonts/ChivoMono-VariableFont_wght.ttf
+        - asset: assets/fonts/Chivo-Light.ttf
           weight: 700
-        - asset: assets/fonts/ChivoMono-VariableFont_wght.ttf
+        - asset: assets/fonts/Chivo-LightItalic.ttf
           weight: 600
+        - asset: assets/fonts/Chivo-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Chivo-MediumItalic.ttf
+          weight: 400
+        - asset: assets/fonts/Chivo-Regular.ttf
+          weight: 300
+        - asset: assets/fonts/Chivo-SemiBold.ttf
+          weight: 200
+        - asset: assets/fonts/Chivo-SemiBoldItalic.ttf
+          weight: 100
     - family:  DynaPuff
       fonts:
         - asset: assets/fonts/DynaPuff-VariableFont_wdth,wght.ttf
-          weight: 500
-        - asset: assets/fonts/DynaPuff-VariableFont_wdth,wght.ttf
-          weight: 400
-        - asset: assets/fonts/DynaPuff-VariableFont_wdth,wght.ttf
-          weight: 300
-        - asset: assets/fonts/DynaPuff-VariableFont_wdth,wght.ttf
-          weight: 200
 
   # fonts:
   #   - family: Schyler
