--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   decorated_dropdownbutton: ^0.0.3
   chips_choice_null_safety: ^2.0.6
   google_fonts: ^2.0.0
+  file_picker: ^5.2.11
   provider:
   shared_preferences:
   path_provider: ^2.0.14
