--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider:
   shared_preferences:
   path_provider: ^2.0.14
+  flutter_switch: ^0.3.2
+  intl: ^0.17.0
 
 
 dev_dependencies:
